Added F and R to temperature conversions. Added in shape generation stuff. Frequencies and temperatures can take units. Need to work on shape generating code tomorrow.
git-svn-id: file:///mnt/svn/rtmath@537 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj.filters
+++ b/rtmath/rtmath/rtmath.vcxproj.filters
@@ -336,6 +336,9 @@
     <ClInclude Include="rtmath\ddscat\shapes.h">
       <Filter>Header Files\ddscat</Filter>
     </ClInclude>
+    <ClInclude Include="rtmath\ddscat\rotations.h">
+      <Filter>Header Files\ddscat</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="rtmath\error\debug_subversion.h.template">
