I have a test of my graph code. The test implements constructs a graph from a group of vertices that have bundled inputs. If any input bundle is complete, then the associated vertex added to the map at that time. This solution can also detect if a graph is split, or if no possible ordering exists to make a complete graph.
This solution, however, is lacking because it loses track of which buncle led to vertex activation. I'd like for different functions
to be lined up based on this constraint, so perhaps I need to rethink the concept of a vertex. Here's the revised idea:
- each vertex represents a function (especially with shape manipulation). Each vertex has a set (without bundles) of inputs.
- all inputs must be available for vertex activation.
- since many functions can possibly be used to manipulate the same variable, a set of 'output only' or 'consolidation' functions will
  examine the outputs of any of the activated functions and ensure that the result is the same.
- effectively, I want to get the shortest path of nodes that provides the most complete solution set
- multiple routines affecting one variable makes it harder.
- still need to preserve isolate detection
- need to reimplement classes such that shape class can work with it and call it easily.


git-svn-id: file:///mnt/svn/rtmath@539 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/ddscat-genparams-qt/ddscat-genparams-qt.vcxproj.filters
+++ b/rtmath/rtmath-apps/ddscat-genparams-qt/ddscat-genparams-qt.vcxproj.filters
@@ -73,4 +73,9 @@
       <Filter>Resource Files</Filter>
     </CustomBuild>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="CMakeLists.txt">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
