--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory (db-catalog-ddscat)
 add_subdirectory (ddparse)
 add_subdirectory (ddscat)
 add_subdirectory (ddscat-genparams)
+add_subdirectory (ddscat-genparams-test)
 add_subdirectory (getm)
 add_subdirectory (mie)
 add_subdirectory (roottest)
