Most of vertex redo implemented. Just need test case. Also, extend implementation to allow vertex in ordering to call a class-wrapped function. This will allow for the fun of virtual functions and operations on data members, like shapes.
git-svn-id: file:///mnt/svn/rtmath@540 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/graphtest/graphtest.vcxproj.filters
+++ b/rtmath/rtmath-apps/graphtest/graphtest.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="vertex.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="vertex2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="vertex.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="vertex2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
