--- a/rtmath/rtmath-apps/graphtest/graphtest.vcxproj
+++ b/rtmath/rtmath-apps/graphtest/graphtest.vcxproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="vertex.cpp" />
+    <ClCompile Include="vertex2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\rtmath\rtmath.vcxproj">
@@ -70,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="vertex.h" />
+    <ClInclude Include="vertex2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
