Okay, the graph generation has been incorporated into the library as depGraph.cpp and .h. Free loops avoided by switching most shared_ptr to weak_ptr. The typedef is rather important in the header, as I needed to use the owner_less<> comparator, since there is no std::less for weak_ptr (yet there is for shared_ptr. c++ design decision.)
shares classes will be adapted to use the new system.

also, the connector function has been added. This makes it east to produce connections between required variables. Also,
iteration through the order list matching connector-provided shared_ptrs is a good way to implement function calling!

TODO: remove _id from vertex class. It is redundant.


git-svn-id: file:///mnt/svn/rtmath@544 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -119,6 +119,7 @@
     <ClInclude Include="rtmath\ddscat\shapefile.h" />
     <ClInclude Include="rtmath\ddscat\shapes.h" />
     <ClInclude Include="rtmath\defs.h" />
+    <ClInclude Include="rtmath\depGraph.h" />
     <ClInclude Include="rtmath\emd.h" />
     <ClInclude Include="rtmath\enums.h" />
     <ClInclude Include="rtmath\error\debug.h" />
@@ -238,6 +239,7 @@
     <ClCompile Include="src\ddweights.cpp" />
     <ClCompile Include="src\debug.cpp" />
     <ClCompile Include="src\debug_mem.cpp" />
+    <ClCompile Include="src\depGraph.cpp" />
     <ClCompile Include="src\emd.cpp" />
     <ClCompile Include="src\error.cpp" />
     <ClCompile Include="src\gridCDF.cpp" />
