Lots of changes. I finished linking in the decision-tree generator for shapes, and began to make the necessary adjustments. I added get and set methods (virtual), that everything else refers to, as I will have many variables. TODO: for more complex shapes, add generator-adding code. Also, added new output variables, so need to change runtime generator logic to account for this.
Fixed ddParLineMixed bug where I was returning the wrong object. Had to suppress MSVC warnings for my new solution.
MSVC compiles differently and throws an extraneous error on the code branch that is not taken.

ddParGenerator logic coming along nicely. Added generate function, which just creates the dir tree. This will supplement
write, which writes out the description file.

shape clone() and derivatives still have compile bug! This will be fixed next.
After this, will add code to set F and reff in ddscat.par!!!!

Is there a better way to iterate over so many changable variables?
Also, need to finish ui and link into it.
Then, will run tests and compile on Linux and Windows.


git-svn-id: file:///mnt/svn/rtmath@547 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -273,6 +273,7 @@
     <ClCompile Include="src\recursivePolynomial.cpp" />
     <ClCompile Include="src\refract.cpp" />
     <ClCompile Include="src\ROOT_functions.cpp" />
+    <ClCompile Include="src\rotations.cpp" />
     <ClCompile Include="src\rtmath.cpp" />
     <ClCompile Include="src\Scalc-Rayleigh.cpp" />
     <ClCompile Include="src\shapefile.cpp" />
