--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -116,6 +116,7 @@
     <ClInclude Include="rtmath\ddscat\mtab.h" />
     <ClInclude Include="rtmath\ddscat\parids.h" />
     <ClInclude Include="rtmath\ddscat\rotations.h" />
+    <ClInclude Include="rtmath\ddscat\runScripts.h" />
     <ClInclude Include="rtmath\ddscat\shapefile.h" />
     <ClInclude Include="rtmath\ddscat\shapes.h" />
     <ClInclude Include="rtmath\defs.h" />
@@ -275,6 +276,7 @@
     <ClCompile Include="src\ROOT_functions.cpp" />
     <ClCompile Include="src\rotations.cpp" />
     <ClCompile Include="src\rtmath.cpp" />
+    <ClCompile Include="src\runScripts.cpp" />
     <ClCompile Include="src\Scalc-Rayleigh.cpp" />
     <ClCompile Include="src\shapefile.cpp" />
     <ClCompile Include="src\shapes.cpp" />
