rtmath code will now have the option to build and include tmatrix components. this requires a FORTRAN compiler and gnu-compatible licensing. also, os-functions updated with tmatrix changes. these added functions are not yet in any headers. TODO.
git-svn-id: file:///mnt/svn/rtmath@559 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -118,6 +118,7 @@ ENDIF(${MSVC})
 
 # The target processing
 # Recurse into the subdirectories
+add_subdirectory (deps)
 add_subdirectory (rtmath)
 if (BUILD_APPS)
 	add_subdirectory (rtmath-apps)
