Most of the testing code was revised to allow for different os paths. The test suites can now find the files on MSVC windows without cmake. I did this because I will be reimplementing genparams-test in this location.
Other than that, a few small bugs were fixed.


git-svn-id: file:///mnt/svn/rtmath@627 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/tests/tests.vcxproj
+++ b/rtmath/rtmath/tests/tests.vcxproj
@@ -67,6 +67,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="globals.cpp" />
     <ClCompile Include="test.cpp" />
     <ClCompile Include="test_atmos.cpp" />
     <ClCompile Include="test_config.cpp" />
@@ -89,6 +90,9 @@
     <ProjectReference Include="..\rtmath.vcxproj">
       <Project>{b80ce2c2-2d78-464d-b936-8977bc6083d7}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="globals.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
