Test cases improved. ddPar load test works, but these tests need a suite-level support struct to avoid code duplication and manage ddscat.par loading.
config now has getCWD. Could use an inline overload.


git-svn-id: file:///mnt/svn/rtmath@628 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/tests/tests.vcxproj
+++ b/rtmath/rtmath/tests/tests.vcxproj
@@ -72,6 +72,8 @@
     <ClCompile Include="test_atmos.cpp" />
     <ClCompile Include="test_config.cpp" />
     <ClCompile Include="test_damatrix.cpp" />
+    <ClCompile Include="test_ddpar.cpp" />
+    <ClCompile Include="test_ddparGenerator.cpp" />
     <ClCompile Include="test_ddscat.cpp" />
     <ClCompile Include="test_ddweights.cpp" />
     <ClCompile Include="test_debug.cpp" />
@@ -83,6 +85,7 @@
     <ClCompile Include="test_units.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="data\ddscat.par" />
     <None Include="data\rtmath.conf" />
     <None Include="data\testing.conf" />
   </ItemGroup>
