CRT memory leak detection indicates that boost testing may leak memory! Odd.... Also, added static instantization reg function to free memory at program exit. Not necessarily needed, but it will help with leak detection.
Debugged test programs. Boost 1_50_0 has a problem with filesystem::path functions or test that
leads to memory corruption. May file boost bug. Problem resolves when downgraded to 1_49_0.

shapefile write function added. It's really just an alias to print().


git-svn-id: file:///mnt/svn/rtmath@632 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="rtmath\ROOTlink.h" />
     <ClInclude Include="rtmath\ROOT_functions.h" />
     <ClInclude Include="rtmath\rtmath.h" />
+    <ClInclude Include="rtmath\serialization.h" />
     <ClInclude Include="rtmath\Stdafx.h" />
     <ClInclude Include="rtmath\units.h" />
     <ClInclude Include="rtmath\zeros.h" />
