More tests written. ddPar now can serialize and load properly (bug fixed with extraneous it++) in scaPlanes. The standard read and write functions work as well. ddParSimple now also has comparison and strict ordering.
Work done on serialization code to allow for compression / decompression. Most of the
stuff should work, but the code to handle boost::iostreams directly is clearly
incorrect and does not compile. I need to read up on this to make sure that
my sources and sinks are correct.

After this, I'll test compression to ensure that it works, and might alter read and write
such that compression is not done at the file io level. Instead, the method will be
passed at the stream level.


git-svn-id: file:///mnt/svn/rtmath@634 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -49,8 +49,7 @@ set(MODULES_FILENAME
 	CACHE STRING
 	"Name of the environment module"
 	)
-option ( USE_IPP
-	"Use Intel Integrated Performance Primitives" OFF)
+
 option ( USE_OPENMP
 	"Enable OpenMP to speed up execution in certain areas" OFF)
 if(MSVC)
@@ -76,6 +75,8 @@ if(LOAD_PACKAGES)
 	find_package(OpenMP)
 	#find_package(Qt4 REQUIRED)
 	#find_package(Curses REQUIRED)
+	find_package(ZLIB)
+	find_package(BZip2)
 endif()
 # Take OpenMP option and enable / disable as appropriate
 IF(USE_OPENMP)
@@ -83,6 +84,25 @@ IF(USE_OPENMP)
 		SET (COMMON_CFLAGS ${COMMON_CFLAGS} ${OpenMP_CXX_FLAGS})
 	ENDIF()
 ENDIF()
+
+# Set available compression schemes
+if(LOAD_PACKAGES)
+	set(COMPRESS_ZLIB 0)
+	set(COMPRESS_GZIP 0)
+	set(COMPRESS_BZIP2 0)
+	if (ZLIB_FOUND)
+		set(COMPRESS_ZLIB 1)
+		set(COMPRESS_GZIP 1)
+	endif()
+	if (BZip2_FOUND)
+		set(COMPRESS_BZIP2 1)
+	endif()
+
+else()
+	set(COMPRESS_ZLIB 1)
+	set(COMPRESS_GZIP 1)
+	set(COMPRESS_BZIP2 1)
+endif()
 
 # Set basic common libraries
 #SET ( COMMON_LIBS 
