--- a/rtmath/rtmath/rtmath/cmake-settings.h.in
+++ b/rtmath/rtmath/rtmath/cmake-settings.h.in
@@ -2,3 +2,6 @@
 
 #define SYS_RTC "@DATA_DIR_PREFIX@/data/rtmath.conf"
 
+#define COMPRESS_ZLIB @COMPRESS_ZLIB@
+#define COMPRESS_GZIP @COMPRESS_GZIP@
+#define COMPRESS_BZIP2 @COMPRESS_BZIP2@
