Serialization compression code should be fixed. Needs test to be written fully. CMakeLists updated to link with boost-iostreams on non-MSVC.
git-svn-id: file:///mnt/svn/rtmath@635 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -117,6 +117,7 @@ ELSE()
 		m
 		boost_filesystem
 		boost_date_time
+		boost_iostreams
                 boost_serialization
 		boost_unit_test_framework
 		boost_system
