Build system fix to get bzip2. debug_preamble now lists used compression algorithms.
Will not implement lowest-level compression / decompression, as filter 
pushing / popping will probably cause problems (compressors are not at 
the lowest level here).



git-svn-id: file:///mnt/svn/rtmath@637 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -94,7 +94,8 @@ if(LOAD_PACKAGES)
 		set(COMPRESS_ZLIB 1)
 		set(COMPRESS_GZIP 1)
 	endif()
-	if (BZip2_FOUND)
+# BZIP2_FOUND requires that the debug libary be found, which is not desired.
+	if (BZIP2_INCLUDE_DIR)
 		set(COMPRESS_BZIP2 1)
 	endif()
 
