rotations ddPar loading fixed. ddpar tests are helping me find code bugs. enhanced reading interface is moving steadily towards completion.
git-svn-id: file:///mnt/svn/rtmath@640 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/tests/tests.vcxproj
+++ b/rtmath/rtmath/tests/tests.vcxproj
@@ -82,6 +82,7 @@
     <ClCompile Include="test_polynomial.cpp" />
     <ClCompile Include="test_quadrature.cpp" />
     <ClCompile Include="test_recPolys.cpp" />
+    <ClCompile Include="test_serialization.cpp" />
     <ClCompile Include="test_units.cpp" />
   </ItemGroup>
   <ItemGroup>
