--- a/rtmath/rtmath/tests/tests.vcxproj.filters
+++ b/rtmath/rtmath/tests/tests.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="test_ddparGenerator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test_serialization.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="data\rtmath.conf">
