generation now works as expected.
still need to specialize indiv run script for ddscat / tmatrix runs.

shapefile copy is performed properly. takes a few seconds, but this can be tied into shapefilestats?
or, instead can just copy or link to the actual file, which will be in a separate directory (also
with uuid?).

most of the writing logic has been pushed to the shapes.

stdafx / rtmath modified to suppress errors. mpl with boost tuple produces c4503 - decorated name
length exceeded. suppressed.

added two shapes for testing purposes. will use for other tests, like shapefile stats.

coords fixed to output 1xn matrix, per docs. mistakenly had nx1.

will implement other shapes next. then, run scripts. then, shape.dat linkage. then, stats.


git-svn-id: file:///mnt/svn/rtmath@654 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/tests/tests.vcxproj
+++ b/rtmath/rtmath/tests/tests.vcxproj
@@ -48,6 +48,7 @@
       <Optimization>Disabled</Optimization>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <MinimalRebuild>false</MinimalRebuild>
+      <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -86,6 +87,8 @@
     <ClCompile Include="test_units.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="data\2mm12shape.txt" />
+    <None Include="data\ddscat-snow-18-3-7.shp" />
     <None Include="data\ddscat.par" />
     <None Include="data\rtmath.conf" />
     <None Include="data\testing.conf" />
