Program now compiles on linux. Issue was that glib has a bug with stream assignment. It even ignores std::move. Switched to using a pointer.
shapes-generators does not copy shape.dat right now, thanks to the boost file copy C++11 bug. I'll reenable it using a function alias (implemented previously in my apps).

Compression may now be turned off (master switch).

frmTarget redone as a QDialog, not QWidget. This allows for form layouts to properly be applied.

Fixed bug when iterating over QTreeView. Was using takeTopLevelItem, instead of topLevelItem. First version removed items from view and prevented iteration. 



git-svn-id: file:///mnt/svn/rtmath@662 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -63,7 +63,8 @@ option ( LOAD_PACKAGES
 )
 option ( BUILD_APPS
 	"Build the default applications" ON)
-
+option ( COMPRESSION_ENABLED 
+	"Enable compression" ON)
 
 if(LOAD_PACKAGES)
 	# Find the locations of ROOT, OpenMP and others
@@ -90,19 +91,23 @@ if(LOAD_PACKAGES)
 	set(COMPRESS_ZLIB 0)
 	set(COMPRESS_GZIP 0)
 	set(COMPRESS_BZIP2 0)
-	if (ZLIB_FOUND)
-		set(COMPRESS_ZLIB 1)
-		set(COMPRESS_GZIP 1)
-	endif()
-# BZIP2_FOUND requires that the debug libary be found, which is not desired.
-	if (BZIP2_INCLUDE_DIR)
-		set(COMPRESS_BZIP2 1)
+	if (COMPRESSION_ENABLED)
+		if (ZLIB_FOUND)
+			set(COMPRESS_ZLIB 1)
+			set(COMPRESS_GZIP 1)
+		endif()
+	# BZIP2_FOUND requires that the debug libary be found, which is not desired.
+		if (BZIP2_INCLUDE_DIR)
+			set(COMPRESS_BZIP2 1)
+		endif()
 	endif()
 
 else()
-	set(COMPRESS_ZLIB 1)
-	set(COMPRESS_GZIP 1)
-	set(COMPRESS_BZIP2 1)
+	if (COMPRESSION_ENABLED)
+		set(COMPRESS_ZLIB 1)
+		set(COMPRESS_GZIP 1)
+		set(COMPRESS_BZIP2 1)
+	endif()
 endif()
 
 # Set basic common libraries
