--- a/rtmath/rtmath-apps/ddscat-genparams-qt/ddscat-genparams-qt.vcxproj
+++ b/rtmath/rtmath-apps/ddscat-genparams-qt/ddscat-genparams-qt.vcxproj
@@ -48,6 +48,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>StdAfx.h</PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>$(IntDir)$(TargetName).pch</PrecompiledHeaderOutputFile>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
